--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,9 @@
 			<version>4.6</version>
 		</dependency>
 		<dependency>
-			<groupId>com.recallq</groupId>
-			<artifactId>parseweblog</artifactId>
-			<version>1.2</version>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.9.1</version>
 		</dependency>
 	</dependencies>
 
